<resources>
    <string name="app_name">Raderie</string>
    <string name="startGame">Start Game</string>
    <string name="results">results</string>
    <string name="deckExtra">deckExtra</string>
    <string name="share">Share</string>
    <string name="FirebaseAuth">firebase-auth</string>
    <string name="fbuuid">fbUUID</string>
    <string name="give_yourself_a_name">Give yourself a name</string>
    <string name="name">Name</string>
    <string name="choseNameKey">userChosenName</string>
    <string name="submit">Submit</string>
    <string name="welcome_back">Welcome back %s</string>
    <string name="CallingActivity">callingActivity</string>
    <string name="LinksActivity">LinksActivity</string>
    <string name="frienduuid">friendUUID</string>
    <string name="share_via_text">Share Via Text</string>
    <string name="wipe_user">Wipe User</string>
    <string name="no_deck_error">User has no deck in the db</string>
    <string name="no_user_error">No user in the db</string>
    <string name="lastUpdated">lastUpdated</string>
    <string name="no_last_updated_error">No Last Updated</string>
    <string name="users_have_d_commonalities">Users have %d commonalities</string>
    <string name="no_commonalities">No commonalities</string>
    <string name="no_friends_error">User has no friends</string>
    <string name="no_name_error">getUserData: No Name Found</string>
    <string name="friend_me">Hi!  Friend me over on Raderie.  We can compare values and start a conversation about what matters.  https://raderie.me/user/%s</string>
    <string name="tie_explanation">Click here if the values are equally important or unimportant to you</string>
    <string name="synonym_explanation">Click here if you consider the two words to be synonyms</string>
    <string name="highest_delta">Wow, you both consider %1s to be a very positive trait!</string>
    <string name="lowest_delta">Neither of you consider %1s to be a very positive trait!</string>
    <string name="friend">Friend</string>
    <string name="me">Me</string>
    <string name="value">Value</string>
    <string name="neutral">Neither of you seem to care much about %1s</string>
    <string name="positive">You both seem to think highly of the value: %1s</string>
    <string name="negative">Neither of you seem to think highly of %1s</string>
    <string name="who_cares_more">%1s seems to care a more about %2s than %3s</string>
    <string name="they_indifferent">You think highly of %1s, but %2s seems indifferent to it</string>
    <string name="i_indifferent">%1s thinks highly of %2s, but you seem indifferent to it</string>
    <string name="sort_by">Sort By:</string>
    <string name="databaseInUse">testValuesDB1</string>
    <string name="testvaluesdb1">testValuesDB1</string>
</resources>